tests/ui/mismatch_fn_ptr_param.stderr
error: mismatch arguments
    ╭─[tests/ui/mismatch_fn_ptr_param.ina:12:5]
    │
 12 │     f(g)
    │     ──┬─
    │       ╰─── expected 2 arguments, found 1
    ∙
────╯
