tests/ui/mismatch_fn_ptr_param.ray
// COMPILE_FAIL

fn f(g: fn(i32) -> i32, a: i32) -> i32 {
    g(a)
}

fn g(a: i32) -> i32 {
    a
}

fn main() -> i32 {
    f(g)
}
